@@ -1,10 +1,10 @@
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
+ * contributor license agreements. See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
  * The ASF licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * the License. You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -22,12 +22,15 @@ package org.apache.ignite.internal.util;
  */
 public class FeatureChecker {
     /** Required options to run on Java 9, 10, 11. */
-    public static final String JAVA_9_10_11_OPTIONS = "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED\n"
+    public static final String JAVA_9_10_11_OPTIONS = ""
+            + "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED\n"
+            + "--add-exports=java.base/jdk.internal.access=ALL-UNNAMED\n"
             + "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED\n"
             + "--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED\n"
             + "--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED\n"
             + "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED\n"
             + "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED\n"
+            + "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED\n"
             + "--illegal-access=permit";
 
     /** Java version specific warning to be added in case access failed. */
